<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/addinfodialogtitle"
        android:layout_marginBottom="12dp"
        android:textColor="@color/colorPrimaryDark"/>

    <GridLayout
        android:id="@+id/glNameTypeAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="3"
        android:rowCount="2">

        <TextView
            android:text="@string/cityTitleAd"
            android:textColor="@color/colorPrimaryDark"
            />
        <EditText
            android:id="@+id/etCityNameAdd"
            android:inputType="textCapCharacters"
            android:lineSpacingMultiplier="1"
            android:lines="1"
            android:hint="@string/enterNameHint"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            />

        <TextView
            android:text="@string/typeTitleAdd"
            android:textColor="@color/colorPrimaryDark"
            />
        <Spinner
            android:id="@+id/spinnTypeAdd"
            android:layout_columnSpan="2"
            android:autofillHints="@string/selectTypeAdd"
            android:layout_gravity="fill_horizontal"
            />
    </GridLayout>

    <GridLayout
        android:id="@+id/glSeasonsTempAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="3"
        android:rowCount="12"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <TextView
            android:text="@string/winter"
            android:textColor="@color/colorPrimaryDark"
            android:layout_columnSpan="3"
            android:textAlignment="center"
            android:layout_gravity="fill"
            android:layout_marginBottom="4dp"
            />
        <TextView
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:textSize="10sp"
            android:text="@string/december"
            android:textAlignment="center"
            />
        <TextView
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:textSize="10sp"
            android:text="@string/january"
            android:textAlignment="center"
            />
        <TextView
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:textSize="10sp"
            android:text="@string/february"
            android:textAlignment="center"
            />
        <EditText
            android:id="@+id/etDecTempAdd"
            android:hint="@string/t"
            android:inputType="number|numberSigned"
            android:textAlignment="center"
            android:layout_gravity="fill_horizontal"
            />
        <EditText
            android:id="@+id/etJanTempAdd"
            android:hint="@string/t"
            android:inputType="number|numberSigned"
            android:textAlignment="center"
            android:layout_gravity="fill_horizontal"
            />
        <EditText
            android:id="@+id/etFebTempAdd"
            android:hint="@string/t"
            android:inputType="number|numberSigned"
            android:textAlignment="center"
            android:layout_gravity="fill_horizontal"
            />

        <TextView
            android:text="@string/spring"
            android:textColor="@color/colorPrimaryDark"
            android:layout_columnSpan="3"
            android:textAlignment="center"
            android:layout_gravity="fill"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            />
        <TextView
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:textSize="10sp"
            android:text="@string/march"
            android:textAlignment="center"
            />
        <TextView
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:textSize="10sp"
            android:text="@string/april"
            android:textAlignment="center"
            />
        <TextView
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:textSize="10sp"
            android:text="@string/may"
            android:textAlignment="center"
            />
        <EditText
            android:id="@+id/etMarTempAdd"
            android:hint="@string/t"
            android:inputType="number|numberSigned"
            android:textAlignment="center"
            android:layout_gravity="fill_horizontal"
            />
        <EditText
            android:id="@+id/etAprTempAdd"
            android:hint="@string/t"
            android:inputType="number|numberSigned"
            android:textAlignment="center"
            android:layout_gravity="fill_horizontal"
            />
        <EditText
            android:id="@+id/etMayTempAdd"
            android:hint="@string/t"
            android:inputType="number|numberSigned"
            android:textAlignment="center"
            android:layout_gravity="fill_horizontal"
            />

        <TextView
            android:text="@string/summer"
            android:textColor="@color/colorPrimaryDark"
            android:layout_columnSpan="3"
            android:textAlignment="center"
            android:layout_gravity="fill"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            />
        <TextView
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:textSize="10sp"
            android:text="@string/juny"
            android:textAlignment="center"
            />
        <TextView
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:textSize="10sp"
            android:text="@string/july"
            android:textAlignment="center"
            />
        <TextView
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:textSize="10sp"
            android:text="@string/august"
            android:textAlignment="center"
            />
        <EditText
            android:id="@+id/etJunTempAdd"
            android:hint="@string/t"
            android:inputType="number|numberSigned"
            android:textAlignment="center"
            android:layout_gravity="fill_horizontal"
            />
        <EditText
            android:id="@+id/etJulTempAdd"
            android:hint="@string/t"
            android:inputType="number|numberSigned"
            android:textAlignment="center"
            android:layout_gravity="fill_horizontal"
            />
        <EditText
            android:id="@+id/etAugTempAdd"
            android:hint="@string/t"
            android:inputType="number|numberSigned"
            android:textAlignment="center"
            android:layout_gravity="fill_horizontal"
            />

        <TextView
            android:text="@string/autumn"
            android:textColor="@color/colorPrimaryDark"
            android:layout_columnSpan="3"
            android:textAlignment="center"
            android:layout_gravity="fill"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            />
        <TextView
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:textSize="10sp"
            android:text="@string/september"
            android:textAlignment="center"
            />
        <TextView
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:textSize="10sp"
            android:text="@string/october"
            android:textAlignment="center"
            />
        <TextView
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:textSize="10sp"
            android:text="@string/november"
            android:textAlignment="center"
            />
        <EditText
            android:id="@+id/etSeptTempAdd"
            android:hint="@string/t"
            android:inputType="number|numberSigned"
            android:textAlignment="center"
            android:layout_gravity="fill_horizontal"
            />
        <EditText
            android:id="@+id/etOctTempAdd"
            android:hint="@string/t"
            android:inputType="number|numberSigned"
            android:textAlignment="center"
            android:layout_gravity="fill_horizontal"
            />
        <EditText
            android:id="@+id/etNovTempAdd"
            android:hint="@string/t"
            android:inputType="number|numberSigned"
            android:textAlignment="center"
            android:layout_gravity="fill_horizontal"
            />

    </GridLayout>

    <Button
        android:id="@+id/btAddInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:padding="2dp"
        android:layout_marginLeft="94dp"
        android:layout_marginRight="94dp"
        android:text="@string/add"
        android:textSize="12sp"
        android:background="@android:color/holo_orange_light"
        android:textColor="@color/colorPrimaryDark"
        />

</LinearLayout>